--- a/views/user/payment.ejs
+++ b/views/user/payment.ejs
@@ -230,6 +230,8 @@
 
 
         document.getElementById('proceedBtn').disabled = false;
+        document.getElementById('proceedBtn').textContent = 'PLACE ORDER';
+
     }
 
     document.getElementById('proceedBtn').addEventListener('click', function () {
