--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -20,6 +20,7 @@
   <div class="bg-white rounded-lg shadow-lg overflow-hidden">
     <form id="productForm" class="p-8" action="/admin/product/edit/<%= product._id %>" method="POST"
       enctype="multipart/form-data">
+    
       <div class="mb-8">
         <h2 class="text-lg font-semibold text-gray-900 mb-6">Basic Information</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -134,6 +135,7 @@
                   <td class="py-4 px-4">
                     <input name="size[]" placeholder="Nil" type="text" value="<%= variant.size %>"
                       class="w-full px-3 py-2 border rounded-md">
+                      <input type="hidden" name="variantId[]" value="<%= variant._id %>">
                     <div class="error"></div>
                   </td>
                   <td class="py-4 px-4">
