--- a/views/partials/user/profileSidebar.ejs
+++ b/views/partials/user/profileSidebar.ejs
@@ -1,28 +1,10 @@
+
 <aside id="sidebar-multi-level-sidebar"
     class="absolute top-0 left-0 z-40 mt-30 w-64 h-auto transition-transform -translate-x-full sm:translate-x-0"
     aria-label="Sidebar">
-    <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-white">
+    <div class="h-full px-3 py-4 overflow-y-auto rounded-2xl bg-gray-50 dark:bg-white">
         <ul class="space-y-2 font-medium">
-
-
-
-            <li>
-                <a href="/myOrders"
-                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-gray-800 hover:bg-gray-100 dark:hover:bg-yellow-400 group">
-                    <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
-                        aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-
-                        <path fill-rule="evenodd"
-                            d="M14 7h-4v3a1 1 0 0 1-2 0V7H6a1 1 0 0 0-.997.923l-.917 11.924A2 2 0 0 0 6.08 22h11.84a2 2 0 0 0 1.994-2.153l-.917-11.924A1 1 0 0 0 18 7h-2v3a1 1 0 1 1-2 0V7Zm-2-3a2 2 0 0 0-2 2v1H8V6a4 4 0 0 1 8 0v1h-2V6a2 2 0 0 0-2-2Z"
-                            clip-rule="evenodd" />
-
-
-
-                    </svg>
-                    <span class="flex-1 ms-3 whitespace-nowrap">Orders</span>
-
-                </a>
-            </li>
+            
             <li>
                 <a href="/profile"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-gray-800 hover:bg-gray-100 dark:hover:bg-yellow-400 group">
@@ -34,6 +16,38 @@
                     <span class="flex-1 ms-3 whitespace-nowrap">Update Profile</span>
                 </a>
             </li>
+            <li>
+                <a href="/myAddress"
+                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-gray-800 hover:bg-gray-100 dark:hover:bg-yellow-400 group">
+                    <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                        aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 22">
+            
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M7 6H5m2 3H5m2 3H5m2 3H5m2 3H5m11-1a2 2 0 0 0-2-2h-2a2 2 0 0 0-2 2M7 3h11a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1Zm8 7a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z" />
+            
+            
+            
+                    </svg>
+                    <span class="flex-1 ms-3 whitespace-nowrap">My Address</span>
+                </a>
+            </li>
+            <li>
+                <a href="/orders"
+                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-gray-800 hover:bg-gray-100 dark:hover:bg-yellow-400 group">
+                    <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                        aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+            
+                        <path fill-rule="evenodd"
+                            d="M14 7h-4v3a1 1 0 0 1-2 0V7H6a1 1 0 0 0-.997.923l-.917 11.924A2 2 0 0 0 6.08 22h11.84a2 2 0 0 0 1.994-2.153l-.917-11.924A1 1 0 0 0 18 7h-2v3a1 1 0 1 1-2 0V7Zm-2-3a2 2 0 0 0-2 2v1H8V6a4 4 0 0 1 8 0v1h-2V6a2 2 0 0 0-2-2Z"
+                            clip-rule="evenodd" />
+            
+            
+            
+                    </svg>
+                    <span class="flex-1 ms-3 whitespace-nowrap">Orders</span>
+            
+                </a>
+            </li>   
             <li>
                 <a href="#"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-gray-800 hover:bg-gray-100 dark:hover:bg-yellow-400 group">
@@ -48,21 +62,7 @@
                     <span class="flex-1 ms-3 whitespace-nowrap">Wallet</span>
                 </a>
             </li>
-            <li>
-                <a href="/myAddress"
-                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-gray-800 hover:bg-gray-100 dark:hover:bg-yellow-400 group">
-                    <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
-                        aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 22">
-
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M7 6H5m2 3H5m2 3H5m2 3H5m2 3H5m11-1a2 2 0 0 0-2-2h-2a2 2 0 0 0-2 2M7 3h11a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1Zm8 7a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z" />
-
-
-
-                    </svg>
-                    <span class="flex-1 ms-3 whitespace-nowrap">My Address</span>
-                </a>
-            </li>
+          
             <li>
                 <a href="#"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-gray-800 hover:bg-gray-100 dark:hover:bg-yellow-400 group">
